# zeugnisbot

./: README.md  pyproject.toml
zeugnisbot/: zeugnisbot.py
zeugnisbot/data/: bewertungstabelle.md
